Fixed bug #70006 (cli - function with default arg = STDOUT crash output).